ghostwriter/static/css/styles.css
/* ... */
.objective-deadline {
  color: var(--primary-color);
  font-weight: 600;
}

.task-future {
  color: var(--primary-color);
}

.task-due-soon {
  color: var(--warning-color);
}

.task-imminent {
  color: var(--blocked-color);
}

.task-header {
  text-align: left;
}

.edit-todo-input {
  resize: none !important;
  box-sizing: border-box;
  max-height: 150px;
  /* optional, but recommended */
  min-height: 2.25rem;
  overflow-x: hidden;
  /* for Firefox (issue #5) */
}

.progress {
  position: relative;
  background-color: var(--neutral-color);
}

.todo-progressbar {
  background-color: var(--primary-color);
}

.todo-progressbar-title {
  position: absolute;
  text-align: center;
  line-height: 20px;
  /* line-height should be equal to bar height */
  overflow: hidden;
  color: #fff;
  right: 0;
  left: 0;
  top: 0;
}

.expandme:before {
  font-family: 'Font Awesome 5 Free';
  content: '\f101';
  font-weight: 900;
  font-size: 1.5em;
  cursor: pointer;
}

tr.accordion-row.open td:first-child+td+td {
  transform: rotate(90deg);
}

.hiddenAccordion {
  display: none;
}

.accordion-content {
  display: none;
}

.accordion-row.complete {
  opacity: 0.5;
  text-decoration: line-through;
}

th.priority-header {
  background-color: var(--secondary-table-header-color);
  text-align: justify;
  padding-top: 10px;
  padding-bottom: 10px;
  border-bottom: none;
  padding-left: 18px;
  pointer-events: none;
  opacity: 0.75;
  color: #fff;
}

tr.priority-row-placeholder>td {
  font-style: italic;
  border-bottom: none;
  opacity: 0.5;
}

th.priority-header.primary {
  background-color: var(--high-rating-color);
}

th.priority-header.primary:before {
  content: '\f12a';
}

th.priority-header.secondary {
  background-color: var(--med-rating-color);
}

th.priority-header.secondary:before {
  content: '\f005';
}

th.priority-header.tertiary {
  background-color: var(--low-rating-color);
}

th.priority-header.tertiary:before {
  content: '\f063';
}

.js-connection-status {
  font-weight: 900;
  color: var(--burned-color);
}

.js-connection-status.connected {
  color: var(--healthy-color);
}

/* ---------------------------------------------------
    INPUT STYLES
----------------------------------------------------- */

.switch {
  position: relative;
  display: inline-block;
  width: 47px;
  height: 20px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 13px;
  width: 13px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked+.slider {
  background-color: var(--primary-color);
}

input:focus+.slider {
  box-shadow: 0 0 1px var(--primary-color);
}

input:checked+.slider:before {
  --webkit-transform: translateX(26px);
  --ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

.hide-expired-slider::after {
  position: absolute;
  right: -105px;

  content: "Hide Expired";
}

.custom-control-label {
  margin-top: 0;
}

.custom-control-input:focus~.custom-control-label::before {
  border-color: var(--secondary-color);
  box-shadow: 0 0 0 0.2rem var(--primary-color) !important;
}

.custom-control-input:checked~.custom-control-label::before {
  border-color: var(--secondary-color) !important;
  background-color: var(--primary-color) !important;
}

.custom-control-input:active~.custom-control-label::before {
  border-color: var(--secondary-color) !important;
  background-color: var(--primary-color) !important;
}

.custom-control-input:focus:not(:checked)~.custom-control-label::before {
  border-color: var(--secondary-color) !important;
}

.custom-control-input-green:not(:disabled):active~.custom-control-label::before {
  border-color: var(--secondary-color) !important;
  background-color: var(--primary-color) !important;
}

/* ---------------------------------------------------
    POSITIONING STYLES
----------------------------------------------------- */

.start-0 {
  left: 0 !important;
}

.end-0 {
  right: 0 !important;
}

/* ---------------------------------------------------
    TEXT CALLOUT STYLES
----------------------------------------------------- */

.slanted-highlight {
  position: relative;
}

.slanted-highlight::before {
  /* Highlight color */
  background-color: var(--primary-color);

  content: "";
  position: absolute;
  width: calc(100% + 10px);
  height: 80%;
  left: -5px;
  bottom: 0;
  z-index: -1;
  transform: rotate(-4deg);
  opacity: 0.3;
}

/* ---------------------------------------------------
    STATUS LIGHTS
----------------------------------------------------- */

/* Based on https://codepen.io/fskirschbaum/pen/MYJNaj */

.led-red {
  position: absolute;
  right: 30px;
  top: 30px;
  width: 24px;
  height: 24px;
  background-color: #F00;
  border-radius: 50%;
  box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #441313 0 -1px 9px, rgba(255, 0, 0, 0.5) 0 2px 12px;
  -webkit-animation: blinkRed 0.5s infinite;
  -moz-animation: blinkRed 0.5s infinite;
  --ms-animation: blinkRed 0.5s infinite;
  -o-animation: blinkRed 0.5s infinite;
  animation: blinkRed 0.5s infinite;
}

@-webkit-keyframes blinkRed {
  from {
    background-color: #F00;
  }

  50% {
    background-color: #A00;
    box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #441313 0 -1px 9px, rgba(255, 0, 0, 0.5) 0 2px 0;
  }

  to {
    background-color: #F00;
  }
}

@-moz-keyframes blinkRed {
  from {
    background-color: #F00;
  }

  50% {
    background-color: #A00;
    box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #441313 0 -1px 9px, rgba(255, 0, 0, 0.5) 0 2px 0;
  }

  to {
    background-color: #F00;
  }
}
/* ... */

